--- a/views/centros/EcoHuerto/html/portada.html
+++ b/views/centros/EcoHuerto/html/portada.html
@@ -15,10 +15,12 @@
 
     <nav>
         <ul class="panel-navegacion">
+            <li><a href="/views/portada.php"  id="inicio">Inicio</a></li>
             <li ><a href="./portada.html" id="portada">Portada</a></li>
             <li><a href="./actividades.html" id="actividades">Actividades</a></li>
             <li><a href="./agenda.html" id="agenda">Agenda</a></li>
             <li><a href="./galeria.html"  id="galeria">Galería</a></li>
+            
 
         </ul>
 
