--- a/css/web.css
+++ b/css/web.css
@@ -26,14 +26,14 @@ body {
   justify-items: center;
   background-color: rgba(255, 255, 255, 0.4);
   padding: 6%;
-  width: 35%;
-  height: 35%;
+  width: 40%;
+  height: 40%;
   margin-top: 2%;
   margin-bottom: 2%;
   flex-wrap: wrap;
 }
 
-.encabezado h1 {
+h1 {
   color: #334f53;
   display: flex;
   align-items: center;
