--- a/css/web.css
+++ b/css/web.css
@@ -73,6 +73,12 @@ h1 {
   color: white;
 }
 
+.menu p {
+  text-decoration: none;
+  font-size: 1.5rem;
+  color: white;
+}
+
 .menu .active {
   text-decoration: none;
   font-size: 2rem;
