--- a/css/web.css
+++ b/css/web.css
@@ -6,7 +6,7 @@ body {
 }
 
 .encabezado {
-  background-image: url("./img/fesoria.webp");
+  background-image: url("./img/agua.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
